--- a/apps/marketing/tsconfig.json
+++ b/apps/marketing/tsconfig.json
@@ -8,9 +8,10 @@
     ]
   },
   "include": [
+    "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "next-env.d.ts",
+    "types/**/*.d.ts",
     "next.config.js",
     ".next/types/**/*.ts"
   ],
