Great Starting Point

--- a/apps/portal/tsconfig.json
+++ b/apps/portal/tsconfig.json
@@ -1,6 +1,12 @@
 {
   "extends": "@repo/typescript-config/nextjs.json",
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./*"
+      ]
+    },
     "plugins": [
       {
         "name": "next"
@@ -8,9 +14,10 @@
     ]
   },
   "include": [
+    "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "next-env.d.ts",
+    "types/**/*.d.ts",
     "next.config.js",
     ".next/types/**/*.ts"
   ],
