--- a/apps/portal/package.json
+++ b/apps/portal/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "docs",
+  "name": "portal",
   "version": "0.1.0",
   "type": "module",
   "private": true,
@@ -12,17 +12,20 @@
   },
   "dependencies": {
     "@repo/ui": "*",
-    "next": "16.1.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "@prisma/client": "^5.22.0",
+    "next": "14.2.5",
+    "next-auth": "^4.24.11",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
     "@types/node": "^22.15.3",
-    "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.2",
+    "@types/react": "18.2.74",
+    "@types/react-dom": "18.2.24",
     "eslint": "^9.39.1",
+    "prisma": "^5.22.0",
     "typescript": "5.9.2"
   }
 }
