--- a/apps/portal/package.json
+++ b/apps/portal/package.json
@@ -11,8 +11,9 @@
     "check-types": "next typegen && tsc --noEmit"
   },
   "dependencies": {
-    "@repo/ui": "*",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.22.0",
+    "@repo/ui": "*",
     "next": "14.2.5",
     "next-auth": "^4.24.11",
     "react": "^18.3.1",
