--- a/apps/portal/package.json
+++ b/apps/portal/package.json
@@ -8,14 +8,19 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "eslint --max-warnings 0",
-    "check-types": "next typegen && tsc --noEmit"
+    "check-types": "tsc --noEmit",
+    "db:migrate:deploy": "node scripts/migrate-deploy.mjs",
+    "db:seed": "node scripts/seed-direct.mjs"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.22.0",
     "@repo/ui": "*",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^3.0.3",
     "next": "14.2.35",
     "next-auth": "^4.24.11",
+    "nodemailer": "^7.0.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -23,6 +28,7 @@
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
     "@types/node": "^22.15.3",
+    "@types/nodemailer": "^7.0.9",
     "@types/react": "18.2.74",
     "@types/react-dom": "18.2.24",
     "eslint": "^9.39.1",
