chore(turbo): allow env vars for portal build

--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,15 @@
     "build": {
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": [".next/**", "!.next/cache/**"]
+      "outputs": [".next/**", "!.next/cache/**"],
+      "env": [
+        "DATABASE_URL",
+        "DIRECT_URL",
+        "NEXTAUTH_URL",
+        "NEXTAUTH_SECRET",
+        "EMAIL_FROM",
+        "SMTP_URL"
+      ]
     },
     "lint": {
       "dependsOn": ["^lint"]
