--- a/apps/portal/package.json
+++ b/apps/portal/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "dev": "next dev --port 3001",
     "build": "prisma generate && next build",
+    "prestart": "node scripts/check-migrations.mjs",
     "start": "next start",
     "lint": "eslint --max-warnings 0",
     "check-types": "tsc --noEmit",
+    "test:timezone": "node --experimental-strip-types --experimental-specifier-resolution=node --test tests/timezone-dst.test.mjs",
     "db:migrate:deploy": "node scripts/migrate-deploy.mjs",
     "db:seed": "node scripts/seed-direct.mjs"
   },
@@ -16,13 +18,21 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.22.0",
     "@repo/ui": "*",
+    "@serwist/next": "^9.5.5",
+    "@tanstack/react-query": "^5.90.21",
+    "@tanstack/react-query-persist-client": "^5.90.22",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^3.0.3",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
+    "idb-keyval": "^6.2.2",
     "next": "14.2.35",
     "next-auth": "^4.24.11",
+    "next-intl": "^3.26.5",
     "nodemailer": "^7.0.13",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "serwist": "^9.5.5"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
