--- a/apps/portal/package.json
+++ b/apps/portal/package.json
@@ -15,13 +15,18 @@
     "db:seed": "node scripts/seed-direct.mjs"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.990.0",
+    "@aws-sdk/s3-request-presigner": "^3.990.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.22.0",
     "@repo/ui": "*",
+    "@sentry/nextjs": "^9.47.1",
     "@serwist/next": "^9.5.5",
     "@tanstack/react-query": "^5.90.21",
     "@tanstack/react-query-persist-client": "^5.90.22",
     "@types/bcryptjs": "^2.4.6",
+    "@upstash/ratelimit": "^2.0.8",
+    "@upstash/redis": "^1.36.2",
     "bcryptjs": "^3.0.3",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
@@ -32,6 +37,7 @@
     "nodemailer": "^7.0.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "resend": "^4.8.0",
     "serwist": "^9.5.5"
   },
   "devDependencies": {
